--- a/styles/components/common/_header.scss
+++ b/styles/components/common/_header.scss
@@ -1,9 +1,13 @@
+.header_section {
+}
 .header {
   position: sticky;
   top: 0;
-  background: #fff;
+  background: #000;
   z-index: 999;
+  height: 80px;
   .header_wrapper {
+    height: 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -13,29 +17,236 @@
       position: relative;
       .middle_menu {
         .multi_menu {
+          min-width: 400px;
           display: flex;
           align-items: center;
           justify-content: space-between;
+          p {
+            font-size: 16px;
+            line-height: 20px;
+            color: #fff;
+            cursor: pointer;
+          }
         }
         .search_input {
           position: absolute;
           top: 40px;
-          left: 0;
-          input {
-            width: 300px;
-            max-width: 100%;
+          left: -191px;
+          .multi_search_container {
+            width: 850px;
+            height: 65px;
+            background: #fff;
+            border-radius: 35px;
+            box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px,
+              rgb(209, 213, 219) 0px 0px 0px 1px inset;
+            .wrapper {
+              form {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                .field {
+                  width: 100%;
+                  height: 65px;
+                  padding-top: 8px;
+                  padding-bottom: 8px;
+                  display: flex;
+                  align-items: center;
+                  position: relative;
+                  &:hover {
+                    background: #f7f7f7;
+                    border-radius: 35px;
+                  }
+                  ::after {
+                    position: absolute;
+                    content: "";
+                    width: 1px;
+                    background: #d5cdcd;
+                    height: 23px;
+                    top: 19px;
+                    right: 12px;
+                  }
+                  :focus {
+                    background: red;
+                  }
+                  .field_wrapper {
+                    p {
+                      font-size: 14px;
+                      font-weight: 600;
+                      line-height: 16px;
+                      color: #222;
+                    }
+                    input {
+                      display: inline-block;
+                      border: none;
+                      outline: none;
+                      background: transparent;
+                    }
+                  }
+                }
+                .one {
+                  padding-left: 18px;
+                }
+                .two,
+                .three,
+                .four {
+                  padding-left: 14px;
+                }
+                .four {
+                  &::after {
+                    position: absolute;
+                    content: "";
+                    width: 1px;
+                    background: #fff !important;
+                    height: 23px;
+                    top: 19px;
+                    right: 12px;
+                  }
+                }
+                .five {
+                  outline: none;
+                  border: none;
+                  width: 45px !important;
+                  height: 45px;
+                  background: #ff385c;
+                  border-radius: 50%;
+                  padding: 15px;
+                  margin-right: 10px;
+                  cursor: pointer;
+                  &:hover {
+                    background: #af1d38;
+                  }
+                  .icon_svg {
+                    font-size: 24px;
+                    color: #fff;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+      .search_active_btn {
+        margin: 0 auto;
+        margin-top: -20px;
+        height: 45px;
+        width: 280px;
+        border: 1px solid gray;
+        border-radius: 35px;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+          rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px;
+        cursor: pointer;
+        p {
+          font-size: 14px;
+          line-height: 18px;
+          color: #222;
+          font-weight: 600;
+          margin-left: 5px;
+        }
+        .icon {
+          height: 30px;
+          width: 30px;
+          background: #ff385c;
+          border-radius: 50%;
+          padding: 7px;
+          .icon_svg {
+            color: #fff;
+            font-size: 17px;
           }
         }
       }
     }
     .active {
       .middle_menu {
-        transform: scaleY(-1);
+        transform: scaleY(-4);
         transform-origin: top;
         transition: all 0.5s ease-in-out;
       }
     }
     .header_right {
+      width: 220px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      p {
+        font-size: 14px;
+        line-height: 18px;
+        font-weight: 600;
+        color: #fff;
+      }
+      .active {
+        color: #222;
+      }
+      .icon {
+        .icon_svg {
+          font-size: 20px;
+          color: #fff;
+        }
+        .active {
+          color: #222;
+        }
+      }
+      .menu_group {
+        position: relative;
+        user-select: none;
+        .menu_btn {
+          width: 80px;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          padding: 8px;
+          padding-top: 11px;
+          border: 1px solid gray;
+          background: #fff;
+          border-radius: 30px;
+          cursor: pointer;
+          transition: all 0.1s ease-in-out;
+          &:hover {
+            box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
+              rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+          }
+          .icon {
+            .icon_svg {
+              font-size: 24px;
+              color: #717171;
+            }
+          }
+        }
+        .menu_options {
+          position: absolute;
+          top: 60px;
+          right: 0;
+          background: #fff;
+          width: 240px;
+          padding: 10px 0;
+          border-radius: 10px;
+          box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+          ul {
+            list-style: none;
+            li {
+              padding: 10px 0;
+              padding-left: 10px;
+              cursor: pointer;
+              transition: all 0.1s ease-in-out;
+              &:hover {
+                background: #f7f7f7;
+              }
+              p {
+                font-size: 14px;
+                line-height: 18px;
+                font-weight: 500;
+                color: #222;
+              }
+            }
+          }
+        }
+      }
     }
   }
+}
+.header_active {
+  background: #fff;
 }
