--- a/styles/components/custom/_discover.scss
+++ b/styles/components/custom/_discover.scss
@@ -1,7 +1,6 @@
 .discover {
+  padding-bottom: 100px;
   .discover_container {
-    width: 80%;
-    margin: 0 auto;
     .container_wrapper {
       .container_title {
         h1 {
