--- a/styles/components/custom/_homeNewsContainer.scss
+++ b/styles/components/custom/_homeNewsContainer.scss
@@ -2,10 +2,11 @@
   background: #000000;
   padding: 20px 0;
   min-height: 900px;
+  padding-top: 85px;
 }
 .home_news_container {
-  width: 80%;
-  margin: 0px auto;
+  // width: 80%;
+  // margin: 0px auto;
   min-height: 372px;
   border-radius: 10px;
   background: rgb(255, 56, 92);
