--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,6 +9,7 @@
 //components
 @import "./components/custom/homeNewsContainer";
 @import "./components/custom/homeHero";
+@import "./components/custom/cities";
 @import "./components/custom/discover";
 @import "./components/custom/homeBottomBanner";
 
