--- a/styles/components/custom/_homeNewsContainer.scss
+++ b/styles/components/custom/_homeNewsContainer.scss
@@ -15,6 +15,7 @@
   justify-content: center;
   .news_container {
     .news_title {
+      text-align: center;
       font-size: 38px;
       line-height: 43px;
       font-weight: 600;
